--- a/src/Volvox.Helios.Web/package.json
+++ b/src/Volvox.Helios.Web/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "devDependencies": {},
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.3.1",
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "bootstrap": ">=4.3.1",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.3",
     "chosen-js": "^1.8.7",
-    "devextreme": "18.2.3"
+    "devextreme": "18.2.3",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "lodash": "^4.17.15"
   }
 }
